--- a/WebPage.htm
+++ b/WebPage.htm
@@ -1,7 +1,5 @@
-<html xmlns:v="urn:schemas-microsoft-com:vml"
-xmlns:o="urn:schemas-microsoft-com:office:office"
-xmlns:dt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882"
-xmlns="http://www.w3.org/TR/REC-html40">
+<DOCTYPE html>
+<html>
 
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
@@ -99,13 +97,13 @@ left:136px;top:140px;width:687px;height:970px'>
   class=shape>
   <p class=MsoNormal style='text-align:center;text-align:center'><span
   lang=en-US style='font-size:22.0pt;line-height:119%;font-family:"Times New Roman";
-  font-weight:bold;language:en-US'>A CARER’S JOURNAL </span></p>
+  font-weight:bold;language:en-US'>A CARERâ€™S JOURNAL </span></p>
   <p class=MsoNormal><span lang=en-US style='font-size:12.0pt;line-height:119%;
   font-family:"Times New Roman";language:en-US'>Did you know that there are many carers amongst us than we often realize? Caring for a loved one is one of the most challenging yet rewarding roles one can undertake in this life.</span></p>
   <p class=MsoNormal><span lang=en-US style='font-size:12.0pt;line-height:119%;
   font-family:"Times New Roman";language:en-US'>In this blog, I will share my journey as a carer, my experiences, the challenges I faced, and the lessons learned. I aim to offer support and connect with others in similar situations. </span></p>
   <p class=MsoNormal><span lang=en-US style='font-size:12.0pt;line-height:119%;
-  font-family:"Times New Roman";language:en-US'>When I first became a carer to my late husband, I struggled to navigate a world I knew little to nothing about. At the time I didn’t realize that I was a carer, all I knew was that I was a spouse. </span></p>
+  font-family:"Times New Roman";language:en-US'>When I first became a carer to my late husband, I struggled to navigate a world I knew little to nothing about. At the time I didnâ€™t realize that I was a carer, all I knew was that I was a spouse. </span></p>
   <p class=MsoNormal><span lang=en-US style='font-size:12.0pt;line-height:119%;
   font-family:"Times New Roman";language:en-US'>In this post I will explain who a carer is, what they do, and why their role is so important. </span></p>
   <p class=MsoNormal><span lang=en-US style='font-size:12.0pt;line-height:119%;
@@ -115,7 +113,7 @@ left:136px;top:140px;width:687px;height:970px'>
   <p class=MsoNormal><span lang=en-US style='font-size:12.0pt;line-height:119%;
   font-family:"Times New Roman";language:en-US'>Oh, did you know that our own bodies can betray us when overwhelmed? When ill health set in? </span></p>
   <p class=MsoNormal><span lang=en-US style='font-size:12.0pt;line-height:119%;
-  font-family:"Times New Roman";language:en-US'>Do you know how completely deceptive health is? How fleeting life is?  How today one is healthy and living life to its fullest and in a snap of a finger that changes, to one being so vulnerable, being so helpless to the point of saying unintelligible things that seem insane to the living but real in the realm of the sick?</span></p>
+  font-family:"Times New Roman";language:en-US'>Do you know how completely deceptive health is? How fleeting life is?Â  How today one is healthy and living life to its fullest and in a snap of a finger that changes, to one being so vulnerable, being so helpless to the point of saying unintelligible things that seem insane to the living but real in the realm of the sick?</span></p>
   <p class=MsoNormal><span lang=en-US style='font-size:12.0pt;line-height:119%;
   font-family:"Times New Roman";language:en-US'>Sit back, watch out for more posts on this journey of being a carer. </span></p>
   <p class=MsoNormal style='margin-bottom:8.0pt;line-height:107%'><span
@@ -125,6 +123,9 @@ left:136px;top:140px;width:687px;height:970px'>
   <![if !vml]></td>
  </tr>
 </table>
+
+
+</html>
 
 </span><![endif]>
 </div>
